( fix ) fix elk stack

--- a/vagrant-elk/Vagrantfile
+++ b/vagrant-elk/Vagrantfile
@@ -93,12 +93,19 @@ Vagrant.configure(2) do |config|
         cd /usr/share/elasticsearch
         #bin/plugin install logstash-input-http
 
+        # install logstash
+        echo 'deb http://packages.elasticsearch.org/logstash/2.0/debian stable main' | sudo tee /etc/apt/sources.list.d/logstash.list
+        sudo apt-get update
+        sudo apt-get install logstash
+        cd /etc/logstash/conf.d/ && curl -O https://raw.githubusercontent.com/sbxtien/VagrantProjects/master/vagrant-elk/resources/logstash.conf
+        sudo service logstash start
+
         # install kibana
         sudo groupadd -g 999 kibana
         sudo useradd -u 999 -g 999 kibana
         cd ~; wget https://download.elastic.co/kibana/kibana/kibana-4.2.0-linux-x64.tar.gz
         tar xvf kibana-*.tar.gz
-        sudo sed -i 's/# server.host: 0.0.0.0/server.host: localhost/' ~/kibana-4*/config/kibana.yml
+        sudo sed -i 's/# server.host: "0.0.0.0"/server.host: localhost/' ~/kibana-4*/config/kibana.yml
         sudo mkdir -p /opt/kibana
         sudo cp -R ~/kibana-4*/* /opt/kibana/
         sudo chown -R kibana: /opt/kibana
@@ -118,13 +125,6 @@ Vagrant.configure(2) do |config|
         sudo ln -s /etc/nginx/sites-available/kibana /etc/nginx/sites-enabled/kibana
         sudo ln -s /etc/nginx/sites-available/elasticsearch /etc/nginx/sites-enabled/elasticsearch
         sudo service nginx restart
-
-        # install logstash
-        echo 'deb http://packages.elasticsearch.org/logstash/2.0/debian stable main' | sudo tee /etc/apt/sources.list.d/logstash.list
-        sudo apt-get update
-        sudo apt-get install logstash
-        cd /etc/logstash/conf.d/ && curl -O https://raw.githubusercontent.com/sbxtien/VagrantProjects/master/vagrant-elk/resources/logstash.conf
-        sudo service logstash start
 
     SHELL
 end
