( fix ) fix elk stack script

--- a/vagrant-elk/resources/logstash.conf
+++ b/vagrant-elk/resources/logstash.conf
@@ -1,6 +1,7 @@
 input {
-    file {
-        path => "/tmp/logstash.txt"
+    http {
+        host => "localhost"
+        port => 9400
     }
 } output {
     elasticsearch {
