--- a/vagrant-elk/resources/logstash.conf
+++ b/vagrant-elk/resources/logstash.conf
@@ -1,10 +1,16 @@
 input {
-    http {
+
+    udp {
         host => "localhost"
-        port => 9400
+        port => "9999"
     }
+
+} filter {
+
 } output {
+
     elasticsearch {
         hosts => ["localhost:9200"]
     }
+
 }
