--- a/vagrant-elk/resources/logstash.conf
+++ b/vagrant-elk/resources/logstash.conf
@@ -1,16 +1,21 @@
 input {
 
     udp {
-        host => "localhost"
         port => "9999"
+        codec => json
     }
 
 } filter {
+
+    geoip {
+        source => "ip"
+    }
 
 } output {
 
     elasticsearch {
         hosts => ["localhost:9200"]
+        index => test_index
     }
 
 }
