--- a/vagrant-elk/resources/logstash.conf
+++ b/vagrant-elk/resources/logstash.conf
@@ -15,7 +15,8 @@ input {
 
     elasticsearch {
         hosts => ["localhost:9200"]
-        index => test_index
+        index => "logstash-test_index"
+        document_type => "logs-test_type"
     }
 
 }
