--- a/vagrant-elk/Vagrantfile
+++ b/vagrant-elk/Vagrantfile
@@ -82,8 +82,10 @@ Vagrant.configure(2) do |config|
         echo "oracle-java8-installer shared/accepted-oracle-license-v1-1 select true" | sudo debconf-set-selections
         sudo apt-get -y install oracle-java8-installer
 
-        # install elasticsearch
+        # elasticsearch signed key
         wget -qO - https://packages.elastic.co/GPG-KEY-elasticsearch | sudo apt-key add -
+
+        # install elasticsearch
         echo "deb http://packages.elastic.co/elasticsearch/2.x/debian stable main" | sudo tee -a /etc/apt/sources.list.d/elasticsearch-2.x.list
         sudo apt-get update
         sudo apt-get -y install elasticsearch
@@ -94,16 +96,15 @@ Vagrant.configure(2) do |config|
         #bin/plugin install logstash-input-http
 
         # install logstash
-        echo 'deb http://packages.elasticsearch.org/logstash/2.0/debian stable main' | sudo tee /etc/apt/sources.list.d/logstash.list
-        sudo apt-get update
-        sudo apt-get install logstash
-        cd /etc/logstash/conf.d/ && curl -O https://raw.githubusercontent.com/sbxtien/VagrantProjects/master/vagrant-elk/resources/logstash.conf
+        echo "deb http://packages.elastic.co/logstash/2.1/debian stable main" | sudo tee -a /etc/apt/sources.list
+        sudo apt-get update && sudo apt-get install logstash
+        cd /etc/logstash/conf.d/ && sudo curl -O https://raw.githubusercontent.com/sbxtien/VagrantProjects/master/vagrant-elk/resources/logstash.conf
         sudo service logstash start
 
         # install kibana
         sudo groupadd -g 5601 kibana
         sudo useradd -u 5601 -g 5601 kibana
-        cd ~; wget https://download.elastic.co/kibana/kibana/kibana-4.2.0-linux-x64.tar.gz
+        cd ~; wget https://download.elastic.co/kibana/kibana/kibana-4.2.1-linux-x64.tar.gz
         tar xvf kibana-*.tar.gz
         sed -i 's/# server.host: "0.0.0.0"/server.host: localhost/' ~/kibana-4*/config/kibana.yml
         sudo mkdir -p /opt/kibana
