--- a/vagrant-elk/Vagrantfile
+++ b/vagrant-elk/Vagrantfile
@@ -85,28 +85,32 @@ Vagrant.configure(2) do |config|
         # elasticsearch signed key
         wget -qO - https://packages.elastic.co/GPG-KEY-elasticsearch | sudo apt-key add -
 
+
         # install elasticsearch
         echo "deb http://packages.elastic.co/elasticsearch/2.x/debian stable main" | sudo tee -a /etc/apt/sources.list.d/elasticsearch-2.x.list
-        sudo apt-get update
-        sudo apt-get -y install elasticsearch
+        sudo apt-get update && sudo apt-get -y install elasticsearch
         sudo sed -i 's/# network.host: 192.168.0.1/network.host: localhost/' /etc/elasticsearch/elasticsearch.yml
         sudo service elasticsearch restart
         sudo update-rc.d elasticsearch defaults 95 10
         cd /usr/share/elasticsearch
         #bin/plugin install logstash-input-http
 
+
         # install logstash
         echo "deb http://packages.elastic.co/logstash/2.1/debian stable main" | sudo tee -a /etc/apt/sources.list
         sudo apt-get update && sudo apt-get install logstash
         cd /etc/logstash/conf.d/ && sudo curl -O https://raw.githubusercontent.com/sbxtien/VagrantProjects/master/vagrant-elk/resources/logstash.conf
         sudo service logstash start
+        sudo update-rc.d logstash defaults 95 10
+        cd /opt/logstash
+
 
         # install kibana
         sudo groupadd -g 5601 kibana
         sudo useradd -u 5601 -g 5601 kibana
         cd ~; wget https://download.elastic.co/kibana/kibana/kibana-4.2.1-linux-x64.tar.gz
         tar xvf kibana-*.tar.gz
-        sed -i 's/# server.host: "0.0.0.0"/server.host: localhost/' ~/kibana-4*/config/kibana.yml
+        sed -i 's/# server.host: "0.0.0.0"/server.host: 172.19.1.142/' ~/kibana-4*/config/kibana.yml
         sudo mkdir -p /opt/kibana
         sudo cp -R ~/kibana-4*/* /opt/kibana/
         sudo chown -R kibana: /opt/kibana
@@ -115,6 +119,7 @@ Vagrant.configure(2) do |config|
         sudo chmod +x /etc/init.d/kibana
         sudo update-rc.d kibana defaults 96 9
         sudo service kibana start
+
 
         # install nginx
         sudo apt-get -y install nginx apache2-utils
